Fixed several bugs
Fixed:
Extra white space at the bottom of Chrome extension popup
Adding a character at the beginning of an equation caused it to appear
at the end
Placing multiple integral, sum, etc. signs caused only the first one to
appear
Adding trailing backslashes or typing \html would cause the output to
break

--- a/equations-chrome/equations/popup.css
+++ b/equations-chrome/equations/popup.css
@@ -47,11 +47,3 @@ body {
 .outer:hover .inner {
   display: block;
 }
-
-#equationBox-wolfram {
-  overflow:auto;
-  color:#5C6166;
-  font-size:1.5em;
-  margin-top:80px;
-  padding-bottom:10px;
-}
